most crud working including update, waiting on delete for swagger issue
